--- a/uknown_rvj16y.z.json
+++ b/uknown_rvj16y.z.json
@@ -6,16 +6,16 @@
 	"sector": "K_2894",
 	"sec_level": 4,
 	"date_added": 1572428110723,
-	"last_scraped": 1572817932697,
+	"last_scraped": 1572820405869,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572428110723
 		}
 	],
-	"next_scrape": 1572861349629,
+	"next_scrape": 1572866884635,
 	"category": "plant_sim",
-	"last_update": 1572817932697,
+	"last_update": 1572820405869,
 	"output": [
 		{
 			"args": {},
@@ -51,18 +51,22 @@
 		},
 		{
 			"args": {},
-			"calls": 84172,
+			"calls": 85382,
 			"base": "c:\"5q9f6w\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
 			"fragments": [
-				" wind",
 				"t, you",
 				"ng win",
+				"ld you",
 				"ing wi",
 				"e I co",
 				"window?",
+				"w?\\n213",
+				"g windo",
+				"u.\\n213F",
 				"213D Of ",
 				"you.\\n213",
-				"ld,\\n213E"
+				"ld,\\n213E",
+				" could,\\n"
 			]
 		}
 	],
@@ -82,6 +86,6 @@
 			]
 		}
 	],
-	"updt": 1572815536540,
-	"edit": 168
+	"updt": 1572818015572,
+	"edit": 169
 }
