--- a/unknown_8qfkzs.tools.json
+++ b/unknown_8qfkzs.tools.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_8qfkzs.tools",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "unknown_8qfkzs.tools",
 	"sector": "K_6762",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1572569680216
+		},
+		{
+			"type": "died",
+			"when": 1572831036117
 		}
 	],
-	"updt": 1572569689961,
-	"edit": 1,
+	"updt": 1572569917865,
+	"edit": 2,
 	"retry_args": [
 		{
 			"do": "LOSE"
@@ -41,6 +45,24 @@
 				"quaring ",
 				"ing data",
 				"h data-p"
+			],
+			"hits": [
+				{
+					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
+					"frags": [
+						"to st",
+						" but ",
+						"a-prac",
+						" squar",
+						"ta-nece",
+						"start s",
+						"with dat",
+						"ut we ne",
+						"quaring ",
+						"ing data",
+						"h data-p"
+					]
+				}
 			]
 		},
 		{
@@ -50,6 +72,42 @@
 			"calls": 101,
 			"base": "YOU WON 2GC\n...if i could afford to pay out.",
 			"fragments": [
+				"to st",
+				" but ",
+				"a-prac",
+				" squar",
+				"ta-nece",
+				"start s",
+				"with dat",
+				"ut we ne",
+				"quaring ",
+				"ing data",
+				"h data-p"
+			],
+			"hits": [
+				{
+					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
+					"frags": [
+						"to st",
+						" but ",
+						"a-prac",
+						" squar",
+						"ta-nece",
+						"start s",
+						"with dat",
+						"ut we ne",
+						"quaring ",
+						"ing data",
+						"h data-p"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
+			"frags": [
 				"to st",
 				" but ",
 				"a-prac",
