--- a/unknown_8qfkzs.t3scrape.json
+++ b/unknown_8qfkzs.t3scrape.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_8qfkzs.t3scrape",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_8qfkzs.t3scrape",
 	"sector": "NGC_1025",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1569085645113
+		},
+		{
+			"type": "died",
+			"when": 1572831381029
 		}
 	],
-	"updt": 1571079367975,
-	"edit": 123,
+	"updt": 1571084548748,
+	"edit": 124,
 	"next_scrape": 1571129361885,
 	"category": "dice_roller",
 	"last_update": 1571084421528,
