--- a/unknown_857ztx.emergency_lime_juice.json
+++ b/unknown_857ztx.emergency_lime_juice.json
@@ -6,42 +6,44 @@
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572665572096,
-	"last_scraped": 1572830783661,
+	"last_scraped": 1572833304874,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572665572096
 		}
 	],
-	"next_scrape": 1572872874663,
+	"next_scrape": 1572878832409,
 	"category": "coin_flipper",
-	"last_update": 1572830783661,
+	"last_update": 1572833304874,
 	"output": [
 		{
 			"args": {},
-			"calls": 640510,
+			"calls": 654745,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ts 3. ",
 				"rength",
-				"I have",
 				" have ",
+				" 7 and",
 				" 3.\\n2",
-				" 16. 4",
-				"with st",
 				"h stren",
 				"ength o",
 				"eats 3.",
 				"C8 Okay",
 				".\\n20C8",
+				"with str",
 				"gth of 3",
 				"d 9. 16.",
 				"C9 4 bea",
 				"?\\n20C9 ",
 				"7 and 9.",
 				"6. 4?\\n2",
+				"20C9 4 b",
 				"20C8 Oka",
-				"16. 4?\\n"
+				"16. 4?\\n",
+				". I have",
+				". 16. 4?"
 			],
 			"hits": [
 				{
@@ -79,6 +81,6 @@
 			]
 		}
 	],
-	"updt": 1572827946915,
-	"edit": 69
+	"updt": 1572830877551,
+	"edit": 70
 }
