--- a/uknown_dk37v3.pounce.json
+++ b/uknown_dk37v3.pounce.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_dk37v3.pounce",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_dk37v3.pounce",
 	"sector": "K_4610",
 	"sec_level": 4,
 	"date_added": 1572845779458,
-	"last_scraped": 1572846351435,
+	"last_scraped": 1572847004479,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572845779458
 		}
 	],
-	"scrape_ct": 11,
-	"next_scrape": 1572846411435,
+	"next_scrape": 1572890269162,
 	"category": "dice_roller",
-	"last_update": 1572846351435,
+	"last_update": 1572847004479,
 	"output": [
 		{
 			"args": {},
-			"calls": 69864,
+			"calls": 145131,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"eone.",
@@ -31,11 +30,15 @@
 				"F6 Will",
 				"you?\\n22",
 				"you say ",
+				"u say wh",
 				"t you?\\n",
 				"ou say w",
 				"o taught",
 				"ll you s",
+				"l need t",
+				"ill you ",
 				"ho taugh",
+				"each som",
 				".\\n21F6 ",
 				" you say",
 				" to teac",
@@ -86,6 +89,6 @@
 			]
 		}
 	],
-	"updt": 1572846215542,
-	"edit": 2
+	"updt": 1572846892445,
+	"edit": 5
 }
