--- a/uknown_dk37v3.npcs.json
+++ b/uknown_dk37v3.npcs.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_dk37v3.npcs",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_dk37v3.npcs",
 	"sector": "SPC_4016",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566817634405
+		},
+		{
+			"type": "died",
+			"when": 1572847791217
 		}
 	],
 	"scrape_ct": 7,
@@ -142,6 +146,6 @@
 			]
 		}
 	],
-	"updt": 1570829867097,
-	"edit": 170
+	"updt": 1570837086239,
+	"edit": 171
 }
