--- a/uknown_dk37v3.pounce.json
+++ b/uknown_dk37v3.pounce.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_dk37v3.pounce",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_dk37v3.pounce",
 	"sector": "K_4610",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572845779458
+		},
+		{
+			"type": "died",
+			"when": 1572847889061
 		}
 	],
 	"next_scrape": 1572890269162,
@@ -89,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1572846892445,
-	"edit": 5
+	"updt": 1572847117511,
+	"edit": 6
 }
