--- a/uknown_dk37v3.ls.json
+++ b/uknown_dk37v3.ls.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_dk37v3.ls",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "uknown_dk37v3.ls",
 	"sector": "HJG_4368",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572581795046
+		},
+		{
+			"type": "died",
+			"when": 1572849984951
 		}
 	],
 	"retry_args": [
@@ -28,6 +32,36 @@
 			"calls": 1220,
 			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 			"fragments": [
+				". ## ",
+				"tains ",
+				" their",
+				"estroye",
+				"In that",
+				" once t",
+				"f them c"
+			],
+			"hits": [
+				{
+					"document": "Proving/Children",
+					"frags": [
+						". ## ",
+						"tains ",
+						" their",
+						"estroye",
+						"In that",
+						" once t",
+						"f them c"
+					]
+				}
+			]
+		}
+	],
+	"updt": 1572581862536,
+	"edit": 1,
+	"identified": [
+		{
+			"document": "Proving/Children",
+			"frags": [
 				". ## ",
 				"tains ",
 				" their",
