--- a/unknown_857ztx.emergency_lime_juice.json
+++ b/unknown_857ztx.emergency_lime_juice.json
@@ -6,30 +6,31 @@
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572665572096,
-	"last_scraped": 1572862036545,
+	"last_scraped": 1572864497572,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572665572096
 		}
 	],
-	"next_scrape": 1572905288228,
+	"next_scrape": 1572908357670,
 	"category": "coin_flipper",
-	"last_update": 1572862036545,
+	"last_update": 1572864497572,
 	"output": [
 		{
 			"args": {},
-			"calls": 740235,
+			"calls": 748206,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ts 3. ",
+				"trengt",
 				"rength",
 				" have ",
 				" 7 and",
-				" 3.\\n2",
 				"h stren",
 				"ength o",
 				"eats 3.",
+				"and 9. ",
 				"C8 Okay",
 				".\\n20C8",
 				"with str",
@@ -37,13 +38,16 @@
 				"d 9. 16.",
 				"C9 4 bea",
 				"?\\n20C9 ",
+				"8 Okay. ",
 				"7 and 9.",
-				"6. 4?\\n2",
 				"20C9 4 b",
 				"20C8 Oka",
-				"16. 4?\\n",
 				". I have",
-				". 16. 4?"
+				". 16. 4?",
+				" beats 3",
+				"f 3.\\n20C",
+				"16. 4?\\n2",
+				" 16. 4?\\n"
 			],
 			"hits": [
 				{
@@ -81,6 +85,6 @@
 			]
 		}
 	],
-	"updt": 1572859520672,
-	"edit": 81
+	"updt": 1572862226012,
+	"edit": 82
 }
