--- a/unknown_m2b4nq.alic_tank.json
+++ b/unknown_m2b4nq.alic_tank.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_m2b4nq.alic_tank",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_m2b4nq.alic_tank",
 	"sector": "K_4610",
 	"sec_level": 4,
 	"date_added": 1572867388906,
-	"last_scraped": 1572867860642,
+	"last_scraped": 1572868624208,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572867388906
 		}
 	],
-	"scrape_ct": 13,
-	"next_scrape": 1572867920642,
+	"next_scrape": 1572912919379,
 	"category": "dice_roller",
-	"last_update": 1572867789923,
+	"last_update": 1572868624208,
 	"output": [
 		{
 			"args": {},
-			"calls": 54714,
+			"calls": 154650,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"mask ",
@@ -55,6 +54,6 @@
 			]
 		}
 	],
-	"updt": 1572867636529,
-	"edit": 2
+	"updt": 1572868537186,
+	"edit": 5
 }
