--- a/uknown_txwe1r.helpdesk.json
+++ b/uknown_txwe1r.helpdesk.json
@@ -6,29 +6,36 @@
 	"sector": "VNP_8698",
 	"sec_level": 4,
 	"date_added": 1572230758655,
-	"last_scraped": 1572887588410,
+	"last_scraped": 1572890454594,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572230758655
 		}
 	],
-	"next_scrape": 1572934371362,
+	"next_scrape": 1572937016673,
 	"category": "coin_flipper",
-	"last_update": 1572887588410,
+	"last_update": 1572890454594,
 	"output": [
 		{
 			"args": {},
-			"calls": 2377350,
+			"calls": 2381879,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
-				"ST0X7",
 				"_FILE0",
+				"T0XF22",
+				"FILE0X",
 				"C7D17C",
+				"0XF227",
+				"ST0X7A_",
+				"MFT0XBF",
 				"LE0X2BC",
 				"F227_FI",
 				"27_FILE",
-				"BF_CLST0"
+				"FT0XBF_C",
+				"E0X2BC7D",
+				"BF_CLST0",
+				"A_SECT0X"
 			],
 			"hits": [
 				{
@@ -60,6 +67,6 @@
 			]
 		}
 	],
-	"updt": 1572884541569,
-	"edit": 287
+	"updt": 1572887696241,
+	"edit": 288
 }
