--- a/unknown_mdv1ud.db.json
+++ b/unknown_mdv1ud.db.json
@@ -6,31 +6,33 @@
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572615508573,
-	"last_scraped": 1572888191155,
+	"last_scraped": 1572891160763,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572615508573
 		}
 	],
-	"next_scrape": 1572934623705,
+	"next_scrape": 1572935462543,
 	"category": "coin_flipper",
-	"last_update": 1572888191155,
+	"last_update": 1572891160763,
 	"output": [
 		{
 			"args": {},
-			"calls": 953601,
+			"calls": 961827,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
+				"sed a",
+				"sandh",
 				"ment;",
 				"ber 2",
 				"2016.",
+				"/use ",
 				" unau",
 				" equi",
 				" Dr. ",
 				" 2016",
 				"tions:",
-				"iation",
 				"equipm",
 				"eptemb",
 				"d appr",
@@ -38,18 +40,23 @@
 				"N87865",
 				"6. Nat",
 				" SG43N",
+				" ComCO",
 				"uthoris",
 				"ubdivis",
 				"mCODE. ",
 				"lity: G",
 				"lations",
 				"ent; un",
+				"ee: Dr.",
 				"bdivisi",
 				"a Rajbh",
 				"43N8786",
 				" Employ",
 				"y: GB. M",
+				"sion: Co",
 				"se of li",
+				"riation/",
+				"ptember ",
 				"opriatio",
 				"ons: una",
 				"ndhya Ra",
@@ -57,11 +64,14 @@
 				"jbhandar",
 				"ision: C",
 				"i. DOB: ",
+				"bhandari",
 				"SID: SG4",
 				"ID: SG43",
 				"DOB: Sep",
 				"DE. Empl",
+				"7865E. S",
 				". Nation",
+				". MOSID:",
 				" of viol",
 				" license",
 				" Summary",
@@ -106,6 +116,6 @@
 			]
 		}
 	],
-	"updt": 1572885218159,
-	"edit": 112
+	"updt": 1572888374037,
+	"edit": 113
 }
