--- a/unknown_mdv1ud.deseancrypt.json
+++ b/unknown_mdv1ud.deseancrypt.json
@@ -6,21 +6,21 @@
 	"sector": "K_4610",
 	"sec_level": 4,
 	"date_added": 1572891091887,
-	"last_scraped": 1572891271890,
+	"last_scraped": 1572892146863,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572891091887
 		}
 	],
-	"scrape_ct": 15,
-	"next_scrape": 1572891331890,
+	"scrape_ct": 2,
+	"next_scrape": 1572892206863,
 	"category": "coin_flipper",
-	"last_update": 1572891271890,
+	"last_update": 1572892146863,
 	"output": [
 		{
 			"args": {},
-			"calls": 35586,
+			"calls": 115811,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"o forc",
@@ -60,5 +60,7 @@
 				" BREAK i"
 			]
 		}
-	]
+	],
+	"updt": 1572891982502,
+	"edit": 4
 }
