--- a/unknown_mdv1ud.deseancrypt.json
+++ b/unknown_mdv1ud.deseancrypt.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_mdv1ud.deseancrypt",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_mdv1ud.deseancrypt",
 	"sector": "K_4610",
 	"sec_level": 4,
 	"date_added": 1572891091887,
-	"last_scraped": 1572892146863,
+	"last_scraped": 1572892367429,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572891091887
 		}
 	],
-	"scrape_ct": 2,
-	"next_scrape": 1572892206863,
+	"next_scrape": 1572934595445,
 	"category": "coin_flipper",
-	"last_update": 1572892146863,
+	"last_update": 1572892367429,
 	"output": [
 		{
 			"args": {},
-			"calls": 115811,
+			"calls": 139154,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"o forc",
@@ -61,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1572891982502,
-	"edit": 4
+	"updt": 1572892208573,
+	"edit": 5
 }
