--- a/unknown_857ztx.emergency_lime_juice.json
+++ b/unknown_857ztx.emergency_lime_juice.json
@@ -6,37 +6,37 @@
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572665572096,
-	"last_scraped": 1572891906194,
+	"last_scraped": 1572894807746,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572665572096
 		}
 	],
-	"next_scrape": 1572934832516,
+	"next_scrape": 1572938092455,
 	"category": "coin_flipper",
-	"last_update": 1572891906194,
+	"last_update": 1572894807746,
 	"output": [
 		{
 			"args": {},
-			"calls": 855553,
+			"calls": 861731,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
-				"ts 3. ",
 				"trengt",
 				"rength",
 				" have ",
-				" 7 and",
 				"h stren",
 				"ength o",
-				"eats 3.",
 				"and 9. ",
 				"C8 Okay",
 				"with str",
 				"gth of 3",
+				"eats 3. ",
+				"e 7 and ",
 				"d 9. 16.",
+				"ave 7 an",
+				"Okay. I ",
 				"C9 4 bea",
-				"?\\n20C9 ",
 				"8 Okay. ",
 				"7 and 9.",
 				"20C9 4 b",
@@ -44,7 +44,9 @@
 				". I have",
 				". 16. 4?",
 				" beats 3",
+				" 7 and 9",
 				"f 3.\\n20C",
+				"4?\\n20C9 ",
 				"16. 4?\\n2",
 				".\\n20C8 O",
 				" 16. 4?\\n"
@@ -85,6 +87,6 @@
 			]
 		}
 	],
-	"updt": 1572889051194,
-	"edit": 94
+	"updt": 1572891982502,
+	"edit": 95
 }
