--- a/unknown_aeptgr.alch.json
+++ b/unknown_aeptgr.alch.json
@@ -6,20 +6,20 @@
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572632114553,
-	"last_scraped": 1572895682628,
+	"last_scraped": 1572898386033,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572632114553
 		}
 	],
-	"next_scrape": 1572941399726,
+	"next_scrape": 1572943642780,
 	"category": "coin_flipper",
-	"last_update": 1572895682628,
+	"last_update": 1572898386033,
 	"output": [
 		{
 			"args": {},
-			"calls": 993792,
+			"calls": 1000589,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"onfir",
@@ -60,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1572893109360,
-	"edit": 105
+	"updt": 1572895819790,
+	"edit": 106
 }
