--- a/unknown_m2b4nq.alic_tank.json
+++ b/unknown_m2b4nq.alic_tank.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_m2b4nq.alic_tank",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_m2b4nq.alic_tank",
 	"sector": "K_4610",
 	"sec_level": 4,
 	"date_added": 1572867388906,
-	"last_scraped": 1572902342972,
+	"last_scraped": 1572902370337,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572867388906
 		}
 	],
-	"next_scrape": 1572946944676,
+	"next_scrape": 1572942016038,
 	"category": "dice_roller",
-	"last_update": 1572902342972,
+	"last_update": 1572902370337,
 	"output": [
 		{
 			"args": {},
-			"calls": 253512,
+			"calls": 268085,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"mask ",
@@ -54,6 +54,6 @@
 			]
 		}
 	],
-	"updt": 1572899200372,
-	"edit": 17
+	"updt": 1572902358840,
+	"edit": 18
 }
