--- a/unknown_mdv1ud.deseancrypt.json
+++ b/unknown_mdv1ud.deseancrypt.json
@@ -6,29 +6,34 @@
 	"sector": "K_4610",
 	"sec_level": 4,
 	"date_added": 1572891091887,
-	"last_scraped": 1572900994397,
+	"last_scraped": 1572904414084,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572891091887
 		}
 	],
-	"next_scrape": 1572942172096,
+	"next_scrape": 1572947876419,
 	"category": "coin_flipper",
-	"last_update": 1572900994397,
+	"last_update": 1572904414084,
 	"output": [
 		{
 			"args": {},
-			"calls": 161024,
+			"calls": 168671,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"o forc",
 				"esolve",
-				" >. BR",
 				"up to f",
+				"6 it re",
+				"2157 BR",
+				" >. BRE",
 				"played\\n",
 				"es as 2.",
-				" BREAK i"
+				"K is >. ",
+				"2.\\n2157",
+				" BREAK i",
+				"as 2.\\n21"
 			],
 			"hits": [
 				{
@@ -60,6 +65,6 @@
 			]
 		}
 	],
-	"updt": 1572898072746,
-	"edit": 8
+	"updt": 1572901003443,
+	"edit": 9
 }
