--- a/unknown_qmw1np.db_backup.json
+++ b/unknown_qmw1np.db_backup.json
@@ -6,22 +6,22 @@
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572633953542,
-	"last_scraped": 1572900883529,
+	"last_scraped": 1572904295655,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572633953542
 		}
 	],
-	"updt": 1572898072746,
-	"edit": 110,
-	"next_scrape": 1572942104140,
+	"updt": 1572901003443,
+	"edit": 111,
+	"next_scrape": 1572949971812,
 	"category": "dice_roller",
-	"last_update": 1572900883529,
+	"last_update": 1572904295655,
 	"output": [
 		{
 			"args": {},
-			"calls": 990396,
+			"calls": 1001915,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				" It's",
