--- a/unknown_857ztx.emergency_lime_juice.json
+++ b/unknown_857ztx.emergency_lime_juice.json
@@ -6,35 +6,39 @@
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572665572096,
-	"last_scraped": 1572903953316,
+	"last_scraped": 1572906633134,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572665572096
 		}
 	],
-	"next_scrape": 1572943730944,
+	"next_scrape": 1572947561523,
 	"category": "coin_flipper",
-	"last_update": 1572903953316,
+	"last_update": 1572906633134,
 	"output": [
 		{
 			"args": {},
-			"calls": 883718,
+			"calls": 891553,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"trengt",
 				"rength",
+				"4 beat",
 				" have ",
-				"h stren",
+				"of 3.\\n",
 				"ength o",
-				"and 9. ",
 				"C8 Okay",
 				"with str",
+				"th stren",
+				"th of 3.",
+				"ngth of ",
 				"gth of 3",
 				"eats 3. ",
 				"e 7 and ",
 				"d 9. 16.",
 				"ave 7 an",
+				"and 9. 1",
 				"Okay. I ",
 				"C9 4 bea",
 				"8 Okay. ",
@@ -87,6 +91,6 @@
 			]
 		}
 	],
-	"updt": 1572900778447,
-	"edit": 98
+	"updt": 1572904165632,
+	"edit": 99
 }
