--- a/unknown_mdv1ud.deseancrypt.json
+++ b/unknown_mdv1ud.deseancrypt.json
@@ -6,34 +6,43 @@
 	"sector": "K_4610",
 	"sec_level": 4,
 	"date_added": 1572891091887,
-	"last_scraped": 1572907205604,
+	"last_scraped": 1572910018454,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572891091887
 		}
 	],
-	"next_scrape": 1572952868326,
+	"next_scrape": 1572954497344,
 	"category": "coin_flipper",
-	"last_update": 1572907205604,
+	"last_update": 1572910018454,
 	"output": [
 		{
 			"args": {},
-			"calls": 176297,
+			"calls": 181697,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
-				"o forc",
-				"esolve",
+				"e up ",
+				"58 fa",
+				"2158 ",
+				" up t",
+				"force ",
 				"up to f",
+				"olves a",
+				"it reso",
 				"6 it re",
 				"2157 BR",
+				" is pla",
 				" >. BRE",
+				"to force",
 				"played\\n",
+				"esolves ",
 				"es as 2.",
 				"K is >. ",
-				"2.\\n2157",
+				"57 BREAK",
 				" BREAK i",
-				"as 2.\\n21"
+				"as 2.\\n21",
+				" 2.\\n2157"
 			],
 			"hits": [
 				{
@@ -65,6 +74,6 @@
 			]
 		}
 	],
-	"updt": 1572904616048,
-	"edit": 10
+	"updt": 1572907321816,
+	"edit": 11
 }
