--- a/unknown_mdv1ud.db.json
+++ b/unknown_mdv1ud.db.json
@@ -6,23 +6,22 @@
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572615508573,
-	"last_scraped": 1572908964048,
+	"last_scraped": 1572911606778,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572615508573
 		}
 	],
-	"next_scrape": 1572949330340,
+	"next_scrape": 1572953242491,
 	"category": "coin_flipper",
-	"last_update": 1572908964048,
+	"last_update": 1572911606778,
 	"output": [
 		{
 			"args": {},
-			"calls": 1002122,
+			"calls": 1009974,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
-				"sed a",
 				"propr",
 				"onali",
 				"ber 2",
@@ -31,28 +30,34 @@
 				" unau",
 				" equi",
 				" Dr. ",
+				"violat",
 				"ty: GB",
-				"equipm",
+				"ndari.",
+				"iolati",
 				"eptemb",
 				"ed equ",
 				"d appr",
 				"Septem",
 				"6. Nat",
-				"/use o",
 				" appro",
 				" Subdi",
 				" SG43N",
+				"y of vi",
 				"uthoris",
 				"uipment",
 				"ubdivis",
+				"ry of v",
 				"nsed eq",
 				"mCODE. ",
+				"loyee: ",
 				"lity: G",
 				"ent; un",
 				"bdivisi",
 				"asandhy",
+				"ajbhand",
 				"a Rajbh",
 				"N87865E",
+				"MOSID: ",
 				"43N8786",
 				" Employ",
 				"yee: Dr.",
@@ -64,25 +69,31 @@
 				"ptember ",
 				"opriatio",
 				"ons: una",
+				"olations",
 				"ndhya Ra",
 				"n Balasa",
 				"mmary of",
 				"lations:",
 				"jbhandar",
 				"ision: C",
+				"ised app",
 				"ipment; ",
 				"ions: un",
 				"ion/use ",
 				"i. DOB: ",
+				"equipmen",
 				"division",
 				"bhandari",
 				"ations: ",
+				"andhya R",
 				"SID: SG4",
 				"National",
 				"ID: SG43",
 				"DOB: Sep",
 				"DE. Empl",
+				": GB. MO",
 				"7865E. S",
+				"/use of ",
 				". Nation",
 				". MOSID:",
 				" of viol",
@@ -131,6 +142,6 @@
 			]
 		}
 	],
-	"updt": 1572906194518,
-	"edit": 119
+	"updt": 1572909289112,
+	"edit": 120
 }
