--- a/uknown_y3oxuh.public.json
+++ b/uknown_y3oxuh.public.json
@@ -6,16 +6,16 @@
 	"sector": "K_4610",
 	"sec_level": 4,
 	"date_added": 1572774135902,
-	"last_scraped": 1572909384811,
+	"last_scraped": 1572912068231,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572774135902
 		}
 	],
-	"next_scrape": 1572954672221,
+	"next_scrape": 1572954652735,
 	"category": "plant_sim",
-	"last_update": 1572909384811,
+	"last_update": 1572912068231,
 	"output": [
 		{
 			"args": {},
@@ -42,6 +42,19 @@
 					]
 				}
 			]
+		},
+		{
+			"args": {},
+			"calls": 1254,
+			"base": "c:\"7oy51q\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
+			"fragments": [
+				"ire l",
+				"ave w",
+				". ## ",
+				" for ",
+				" my ent",
+				" waited "
+			]
 		}
 	],
 	"identified": [
@@ -57,6 +70,6 @@
 			]
 		}
 	],
-	"updt": 1572906644488,
-	"edit": 57
+	"updt": 1572909514352,
+	"edit": 58
 }
