--- a/unknown_mdv1ud.deseancrypt.json
+++ b/unknown_mdv1ud.deseancrypt.json
@@ -6,42 +6,48 @@
 	"sector": "K_4610",
 	"sec_level": 4,
 	"date_added": 1572891091887,
-	"last_scraped": 1572910018454,
+	"last_scraped": 1572912681226,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572891091887
 		}
 	],
-	"next_scrape": 1572954497344,
+	"next_scrape": 1572956672805,
 	"category": "coin_flipper",
-	"last_update": 1572910018454,
+	"last_update": 1572912681226,
 	"output": [
 		{
 			"args": {},
-			"calls": 181697,
+			"calls": 190835,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"e up ",
+				"ce up",
 				"58 fa",
 				"2158 ",
-				" up t",
 				"force ",
-				"up to f",
 				"olves a",
 				"it reso",
 				"6 it re",
-				"2157 BR",
+				" to for",
 				" is pla",
 				" >. BRE",
 				"to force",
 				"played\\n",
+				"is playe",
 				"esolves ",
 				"es as 2.",
 				"K is >. ",
+				"8 face u",
 				"57 BREAK",
+				" up to f",
 				" BREAK i",
+				"yed\\n2158",
+				"s as 2.\\n",
+				"s 2.\\n215",
 				"as 2.\\n21",
+				"\\n2157 BR",
 				" 2.\\n2157"
 			],
 			"hits": [
@@ -74,6 +80,6 @@
 			]
 		}
 	],
-	"updt": 1572907321816,
-	"edit": 11
+	"updt": 1572910189665,
+	"edit": 12
 }
