--- a/unknown_mdv1ud.deseancrypt.json
+++ b/unknown_mdv1ud.deseancrypt.json
@@ -6,40 +6,49 @@
 	"sector": "K_4610",
 	"sec_level": 4,
 	"date_added": 1572891091887,
-	"last_scraped": 1572912681226,
+	"last_scraped": 1572915444001,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572891091887
 		}
 	],
-	"next_scrape": 1572956672805,
+	"next_scrape": 1572961031728,
 	"category": "coin_flipper",
-	"last_update": 1572912681226,
+	"last_update": 1572915444001,
 	"output": [
 		{
 			"args": {},
-			"calls": 190835,
+			"calls": 200675,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
-				"e up ",
 				"ce up",
-				"58 fa",
 				"2158 ",
 				"force ",
+				"K is p",
+				"56 it ",
 				"olves a",
 				"it reso",
+				"e up to",
 				"6 it re",
+				"157 BRE",
 				" to for",
 				" is pla",
 				" >. BRE",
 				"to force",
+				"t resolv",
+				"resolves",
 				"played\\n",
 				"is playe",
+				"is >. BR",
 				"esolves ",
 				"es as 2.",
 				"K is >. ",
+				"BREAK is",
+				"AK is >.",
+				">. BREAK",
 				"8 face u",
+				"58 face ",
 				"57 BREAK",
 				" up to f",
 				" BREAK i",
@@ -80,6 +89,6 @@
 			]
 		}
 	],
-	"updt": 1572910189665,
-	"edit": 12
+	"updt": 1572912894619,
+	"edit": 13
 }
