--- a/unknown_mdv1ud.cripts.json
+++ b/unknown_mdv1ud.cripts.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_mdv1ud.cripts",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_mdv1ud.cripts",
 	"sector": "K_4610",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572914801667
+		},
+		{
+			"type": "died",
+			"when": 1572917175794
 		}
 	],
 	"retry_args": [
@@ -68,5 +72,7 @@
 				"allory\\n2"
 			]
 		}
-	]
+	],
+	"updt": 1572914924670,
+	"edit": 1
 }
