--- a/unknown_mdv1ud.db.json
+++ b/unknown_mdv1ud.db.json
@@ -1,29 +1,34 @@
 {
 	"_id": "unknown_mdv1ud.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_mdv1ud.db",
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572615508573,
-	"last_scraped": 1572914318754,
+	"last_scraped": 1572917023878,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572615508573
+		},
+		{
+			"type": "died",
+			"when": 1572917175794
 		}
 	],
-	"next_scrape": 1572956525545,
+	"next_scrape": 1572959807847,
 	"category": "coin_flipper",
-	"last_update": 1572914318754,
+	"last_update": 1572917023878,
 	"output": [
 		{
 			"args": {},
-			"calls": 1017254,
+			"calls": 1021150,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ropri",
 				"propr",
+				"pprop",
 				"onali",
 				"ber 2",
 				"Erin ",
@@ -35,11 +40,11 @@
 				"ty: GB",
 				"ndari.",
 				"iolati",
-				"eptemb",
 				"ed equ",
 				"d appr",
-				"Septem",
+				"censed",
 				"6. Nat",
+				"2 2016",
 				" appro",
 				" Subdi",
 				" SG43N",
@@ -48,7 +53,6 @@
 				"uipment",
 				"ubdivis",
 				"ry of v",
-				"nsed eq",
 				"n: ComC",
 				"mCODE. ",
 				"loyee: ",
@@ -83,11 +87,13 @@
 				"ion/use ",
 				"i. DOB: ",
 				"equipmen",
+				"ensed eq",
 				"division",
 				"dari. DO",
 				"bhandari",
 				"ations: ",
 				"andhya R",
+				"Summary ",
 				"SID: SG4",
 				"National",
 				"ID: SG43",
@@ -101,6 +107,7 @@
 				" of viol",
 				" license",
 				" Summary",
+				" Septemb",
 				" Rajbhan",
 				" MOSID: ",
 				" ComCODE",
@@ -145,6 +152,6 @@
 			]
 		}
 	],
-	"updt": 1572911768199,
-	"edit": 121
+	"updt": 1572914472250,
+	"edit": 122
 }
