--- a/unknown_mdv1ud.deseancrypt.json
+++ b/unknown_mdv1ud.deseancrypt.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_mdv1ud.deseancrypt",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_mdv1ud.deseancrypt",
 	"sector": "K_4610",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572891091887
+		},
+		{
+			"type": "died",
+			"when": 1572917175794
 		}
 	],
 	"next_scrape": 1572961031728,
@@ -89,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1572912894619,
-	"edit": 13
+	"updt": 1572915825384,
+	"edit": 14
 }
