--- a/unknown_mdv1ud.unlock.json
+++ b/unknown_mdv1ud.unlock.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_mdv1ud.unlock",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_mdv1ud.unlock",
 	"sector": "SPC_1857",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566313111218
+		},
+		{
+			"type": "died",
+			"when": 1572917131904
 		}
 	],
 	"scrape_ct": 16,
@@ -149,6 +153,6 @@
 			]
 		}
 	],
-	"updt": 1571053206758,
-	"edit": 115
+	"updt": 1571059069501,
+	"edit": 116
 }
