--- a/unknown_857ztx.emergency_lime_juice.json
+++ b/unknown_857ztx.emergency_lime_juice.json
@@ -6,32 +6,30 @@
 	"sector": "K_1684",
 	"sec_level": 4,
 	"date_added": 1572665572096,
-	"last_scraped": 1572914993854,
+	"last_scraped": 1572917563109,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572665572096
 		}
 	],
-	"next_scrape": 1572961473402,
+	"next_scrape": 1572957951490,
 	"category": "coin_flipper",
-	"last_update": 1572914993854,
+	"last_update": 1572917563109,
 	"output": [
 		{
 			"args": {},
-			"calls": 916667,
+			"calls": 925905,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
-				"trengt",
-				"rength",
 				"4 beat",
-				" have ",
 				" 3. My",
 				"ength o",
 				"C8 Okay",
 				"with str",
 				"th stren",
 				"th of 3.",
+				"strength",
 				"ngth of ",
 				"gth of 3",
 				"eats 3. ",
@@ -40,6 +38,7 @@
 				"ave 7 an",
 				"and 9. 1",
 				"Okay. I ",
+				"I have 7",
 				"C9 4 bea",
 				"9. 16. 4",
 				"8 Okay. ",
@@ -49,6 +48,8 @@
 				". I have",
 				". 4?\\n20",
 				". 16. 4?",
+				" with st",
+				" strengt",
 				" beats 3",
 				" 9. 16. ",
 				" 7 and 9",
@@ -96,6 +97,6 @@
 			]
 		}
 	],
-	"updt": 1572912218000,
-	"edit": 102
+	"updt": 1572915149117,
+	"edit": 103
 }
